[package]
name = "crate-name"
version = "0.1.0"
authors = ["Connor Fitzgerald <connorwadefitzgerald@gmail.com>"]
edition = "2018"
description = ".."
readme = "README.md"
repository = "https://github.com/BVE-Reborn/crate-name"
# license = "MIT OR Apache-2.0 OR Zlib"
# license = "MPL-2.0"
keywords = []
categories = []

[profile.release]
debug = false
lto = "thin"
